[gd_scene load_steps=17 format=2]

[ext_resource path="res://vidas.gd" type="Script" id=1]
[ext_resource path="res://Mundo/vidas/sprite/Vidas3.png" type="Texture" id=2]
[ext_resource path="res://Mundo/vidas/sprite/Vidas4.png" type="Texture" id=3]
[ext_resource path="res://Mundo/vidas/sprite/Vidas5.png" type="Texture" id=4]
[ext_resource path="res://Mundo/vidas/sprite/Vidas2.png" type="Texture" id=5]
[ext_resource path="res://Mundo/vidas/sprite/Vidas.png" type="Texture" id=6]
[ext_resource path="res://Mundo/vidas/sprite/blancas/VidasB4.png" type="Texture" id=7]
[ext_resource path="res://Mundo/vidas/sprite/blancas/VidasB5.png" type="Texture" id=8]
[ext_resource path="res://Mundo/vidas/sprite/blancas/VidasB3.png" type="Texture" id=9]
[ext_resource path="res://Mundo/vidas/sprite/blancas/Vidas full.png" type="Texture" id=10]
[ext_resource path="res://Mundo/vidas/sprite/blancas/VidasB2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[node name="vidas" type="Node2D"]
script = ExtResource( 1 )

[node name="vida_1" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 2 )
animation = "move"

[node name="vida_2" type="AnimatedSprite" parent="."]
position = Vector2( 52, 0 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "move"

[node name="vida_3" type="AnimatedSprite" parent="."]
position = Vector2( 106, -1 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 3 )
animation = "move"

[node name="vida_4" type="AnimatedSprite" parent="."]
position = Vector2( 160, 0 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 4 )
animation = "move"

[node name="vida_5" type="AnimatedSprite" parent="."]
position = Vector2( 214, -5.96046e-08 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 5 )
animation = "move"
frame = 1
